--- a/testRabbitMQ.ini
+++ b/testRabbitMQ.ini
@@ -1,11 +1,11 @@
 [testServer]
 BROKER_HOST = 127.0.0.1
 BROKER_PORT = 5672
-USER = test
-PASSWORD = test
-VHOST = testHost
-EXCHANGE = testExchange
-QUEUE = testQueue
+USER = dmzUser
+PASSWORD = dzit490-1
+VHOST = UFCVHost
+EXCHANGE = WS-DB
+QUEUE = loginQueue
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 
